@@ -420,8 +420,10 @@ public:
 
 #include "errorcl.h"
 
-ERROR_CLASS_DECL(mem): public cl_error
+class cl_error_mem: public cl_error
 {
+private:
+  static class cl_error_class *error_mem_class;
 protected:
   class cl_memory *mem;
   t_addr addr;
@@ -429,16 +431,20 @@ public:
   cl_error_mem(class cl_memory *amem, t_addr aaddr);
 };
 
-ERROR_CLASS_DECL(mem_invalid_address): public cl_error_mem
+class cl_error_mem_invalid_address: public cl_error_mem
 {
+private:
+  static class cl_error_class *error_mem_invalid_address_class;
 public:
   cl_error_mem_invalid_address(class cl_memory *amem, t_addr aaddr);
 
   virtual void print(class cl_commander *c);
 };
 
-ERROR_CLASS_DECL(mem_non_decoded): public cl_error_mem
+class cl_error_mem_non_decoded: public cl_error_mem
 {
+private:
+  static class cl_error_class *error_mem_non_decoded_class;
 public:
   cl_error_mem_non_decoded(class cl_memory *amem, t_addr aaddr);
 
